# ChangeLog for app-doc/lapack-docs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/lapack-docs/ChangeLog,v 1.14 2007/11/21 00:58:36 lavajoe Exp $

  21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> lapack-docs-3.1.1.ebuild:
  Add ~x86-fbsd keyword (bug #189738)

  16 Nov 2007; nixnut <nixnut@gentoo.org> lapack-docs-3.1.1.ebuild:
  Stable on ppc wrt bug 189738

  14 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-docs-3.1.1.ebuild:
  amd64 stable wrt #189738, with kingtaco's green light.

  14 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-docs-3.1.1.ebuild:
  amd64 stable with kingtaco's blessing.

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> lapack-docs-3.1.1.ebuild:
  alpha stable wrt #189738

  21 Oct 2007; nixnut <nixnut@gentoo.org> lapack-docs-3.1.1.ebuild:
  Added ~ppc

  10 Oct 2007; Markus Rothe <corsair@gentoo.org> lapack-docs-3.1.1.ebuild:
  Stable on ppc64; bug #189738

  28 Sep 2007; Raúl Porcel <armin76@gentoo.org> lapack-docs-3.1.1.ebuild:
  ia64/sparc stable wrt #189738

  13 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  lapack-docs-3.1.1.ebuild:
  stable x86, bug 189738

  05 Sep 2007; Jeroen Roovers <jer@gentoo.org> lapack-docs-3.1.1.ebuild:
  Stable for HPPA (bug #189738).

  23 Aug 2007; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-docs-3.1.1.ebuild:
  do bash loop instead of rename, as blas-docs.

*lapack-docs-3.1.1 (03 May 2007)

  03 May 2007; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  -lapack-docs-3.1.ebuild, +lapack-docs-3.1.1.ebuild:
  Version bump. Added longdescription in metadata.xml

  08 Feb 2007; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-docs-3.1.ebuild:
  Changed LICENSE to BSD

  07 Feb 2007; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-docs-3.1.ebuild:
  removed src_compile and absent files

*lapack-docs-3.1 (07 Feb 2007)

  07 Feb 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,