@@ -1,6 +1,9 @@
 # ChangeLog for app-doc/lapack-docs
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/lapack-docs/ChangeLog,v 1.14 2007/11/21 00:58:36 lavajoe Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-doc/lapack-docs/ChangeLog,v 1.15 2008/06/29 10:47:46 tove Exp $
+
+  29 Jun 2008; Torsten Veller <tove@gentoo.org> lapack-docs-3.1.1.ebuild:
+  Add missing die: || "..." -> || die "..."
 
   21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> lapack-docs-3.1.1.ebuild:
   Add ~x86-fbsd keyword (bug #189738)
